MiASI_project_mp/out/production/MiASI_project_mp/grammar/first.g4
grammar first;

prog:	stat* EOF ;

stat: expr #expr_stat
    | IF_kw '(' cond=expr ')' then=block  ('else' else=block)? #if_stat
    | '>' expr #print_stat
    | FILE expr expr #file_stat
    | STRINIT ID #inite
    ;

block : stat #block_single
    | '{' block* '}' #block_real
    ;

expr:
        l=expr op=(MUL|DIV) r=expr #binOp
    |	l=expr op=(ADD|SUB) r=expr #binOp
    |   ID #var_id
    |	INT #int_tok
    |   STRING #string_tok
    |	'(' expr ')' #pars
    | <assoc=right> ID '='  expr  # assign
    ;

/////////////
FILE : 'save_file' ;


STRING : '"' ~[\r\n"]* '"' ;

STRINIT : 'string' ;
////////////////


IF_kw : 'if' ;

DIV : '/' ;

MUL : '*' ;

SUB : '-' ;

ADD : '+' ;

//NEWLINE : [\r\n]+ -> skip;
NEWLINE : [\r\n]+ -> channel(HIDDEN);

//WS : [ \t]+ -> skip ;
WS : [ \t]+ -> channel(HIDDEN) ;

INT     : [0-9]+ ;


ID : [a-zA-Z_][a-zA-Z0-9_]* ;

COMMENT : '/*' .*? '*/' -> channel(HIDDEN) ;
LINE_COMMENT : '//' ~'\n'* '\n' -> channel(HIDDEN) ;


